--- a/SML_Project_Q3.ipynb
+++ b/SML_Project_Q3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN4njkplwjqAlObzZZ0Ae28",
+      "authorship_tag": "ABX9TyMv+66vPRbs751aSN9I56CF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AUT-Student/SML-Project/blob/main/SML_Project_Q3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<center><b>In the name of God</b></center>\n",
+        "\n",
+        "<b>Course</b>: Statistical Machine Learning\n",
+        "<br>\n",
+        "<b>Description:</b> Project | Question 3\n",
+        "<br>\n",
+        "<b>Developer</b>: Alireza Mazochi (400131075)"
+      ],
+      "metadata": {
+        "id": "2OKW178bLzda"
+      }
     },
     {
       "cell_type": "markdown",
@@ -632,194 +647,6 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset = overall_dataset[[\"Date\", \"Return\"]]"
-      ],
-      "metadata": {
-        "id": "EsH_3x8SE6yx"
-      },
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset[\"Prev-Return\"] = dataset[\"Return\"].shift(1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "20a76c3e-3193-482a-e700-ff910dc5ffa8",
-        "id": "ygsn-nVcE6yy"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-9-f85bb46906f7>:1: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  dataset[\"Prev-Return\"] = dataset[\"Return\"].shift(1)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "dataset.dropna(inplace=True)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Jx9LtxpLE7rQ",
-        "outputId": "19c85367-c4cd-4944-dbd4-6fa9dc2062a9"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.8/dist-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  return func(*args, **kwargs)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X = dataset[\"Prev-Return\"].values\n",
-        "Y = (dataset[\"Return\"] >= 0).values"
-      ],
-      "metadata": {
-        "id": "cgk3ABvyE8jf"
-      },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "n = len(dataset)"
-      ],
-      "metadata": {
-        "id": "jW1lb_ctFZOb"
-      },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_train, X_test = X[:int(0.8*n)], X[int(0.8*n):]\n",
-        "Y_train, Y_test = Y[:int(0.8*n)], Y[int(0.8*n):]"
-      ],
-      "metadata": {
-        "id": "QrnhkwU-FZOb"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "X_train_p = X_train[Y_train]\n",
-        "X_train_n = X_train[Y_train==False]"
-      ],
-      "metadata": {
-        "id": "u2YMr1giIq-B"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "normal_p_mean = np.mean(X_train_p)\n",
-        "normal_p_var = np.var(X_train_p)\n",
-        "print(f\"Positive Normal Params: {normal_p_mean}, {normal_p_var}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2SgHCMaOLcQd",
-        "outputId": "559f5f1e-adf6-40d5-bf86-1bd0b4927dc1"
-      },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Positive Normal Params: 0.003034647813411533, 0.0001554185379466679\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "normal_n_mean = np.mean(X_train_n)\n",
-        "normal_n_var = np.var(X_train_n)\n",
-        "print(f\"Negative Normal Params: {normal_n_mean}, {normal_n_var}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bXEMH-ojLiuk",
-        "outputId": "dacfcf63-99b2-4e8e-a396-941e92313ebc"
-      },
-      "execution_count": 59,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Negative Normal Params: -0.002910032804687265, 0.00012366374694993074\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "prior_p = len(X_train_p) / (len(X_train_p)+len(X_train_n))\n",
-        "prior_n = len(X_train_n) / (len(X_train_p)+len(X_train_n))\n",
-        "print(f\"#positive = {len(X_train_p)}, #negative = {len(X_train_n)}\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hmuQFXxyOCRE",
-        "outputId": "1f049f59-f5a7-406e-cd5a-b2357d9d1e71"
-      },
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "#positive = 193, #negative = 187\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def classification(X):\n",
         "  prob_p = prior_p * scipy.stats.norm(normal_p_mean, normal_p_var).pdf(X) \n",
         "  prob_n = prior_n * scipy.stats.norm(normal_n_mean, normal_n_var).pdf(X) \n",
@@ -829,18 +656,7 @@
       "metadata": {
         "id": "jxuFF_gqOi4L"
       },
-      "execution_count": 61,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "Y_predicted = classification(X_test)"
-      ],
-      "metadata": {
-        "id": "qJ2eCUwWRzIX"
-      },
-      "execution_count": 62,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -852,58 +668,111 @@
       "metadata": {
         "id": "Uf22m3diSw1-"
       },
-      "execution_count": 63,
+      "execution_count": 83,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "accuracy(Y_test, Y_predicted)"
+        "from pandas.core.internals.blocks import soft_convert_objects\n",
+        "for i in range(1, 5):\n",
+        "  print(f\"i = {i}\")\n",
+        "\n",
+        "  dataset = overall_dataset[[\"Date\", \"Return\"]]\n",
+        "\n",
+        "  dataset[\"Prev-Return\"] = dataset[\"Return\"].shift(i)\n",
+        "\n",
+        "  dataset.dropna(inplace=True)\n",
+        "\n",
+        "  X = dataset[\"Prev-Return\"].values\n",
+        "  Y = (dataset[\"Return\"] >= 0).values\n",
+        "\n",
+        "  n = len(dataset)\n",
+        "\n",
+        "  X_train, X_test = X[:int(0.8*n)], X[int(0.8*n):]\n",
+        "  Y_train, Y_test = Y[:int(0.8*n)], Y[int(0.8*n):]\n",
+        "\n",
+        "  X_train_p = X_train[Y_train]\n",
+        "  X_train_n = X_train[Y_train==False]\n",
+        "\n",
+        "  normal_p_mean = np.mean(X_train_p)\n",
+        "  normal_p_var = np.var(X_train_p)\n",
+        "  print(f\"Positive Normal Params: {normal_p_mean}, {normal_p_var}\")\n",
+        "\n",
+        "  normal_n_mean = np.mean(X_train_n)\n",
+        "  normal_n_var = np.var(X_train_n)\n",
+        "  print(f\"Negative Normal Params: {normal_n_mean}, {normal_n_var}\")\n",
+        "\n",
+        "  prior_p = len(X_train_p) / (len(X_train_p)+len(X_train_n))\n",
+        "  prior_n = len(X_train_n) / (len(X_train_p)+len(X_train_n))\n",
+        "  print(f\"#positive = {len(X_train_p)}, #negative = {len(X_train_n)}\")\n",
+        "\n",
+        "  Y_predicted = classification(X_test)\n",
+        "\n",
+        "  score = accuracy(Y_test, Y_predicted)\n",
+        "\n",
+        "  print(f\"Accuracy = {score}\")\n",
+        "\n",
+        "  trivial_score = max(sum(Y_test), sum(Y_test==False))/len(Y_test)\n",
+        "\n",
+        "  print(f\"Trivial Accuracy = {trivial_score}\")\n",
+        "\n",
+        "  print(\"=============\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "liiEHTbRS4Yn",
-        "outputId": "071ea898-c695-42e5-ac2e-cd330fe3e40d"
+        "outputId": "9922f566-3281-48f1-c93c-6a81ff0dfa2b",
+        "id": "ygsn-nVcE6yy"
       },
-      "execution_count": 64,
+      "execution_count": 86,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5833333333333334"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 64
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "max(sum(Y_test), sum(Y_test==False))/len(Y_test)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "i = 1\n",
+            "Positive Normal Params: 0.003034647813411533, 0.0001554185379466679\n",
+            "Negative Normal Params: -0.002910032804687265, 0.00012366374694993074\n",
+            "#positive = 193, #negative = 187\n",
+            "Accuracy = 0.5833333333333334\n",
+            "Trivial Accuracy = 0.53125\n",
+            "=============\n",
+            "i = 2\n",
+            "Positive Normal Params: -0.00033104249045083834, 0.00018571273074404547\n",
+            "Negative Normal Params: 0.0005636475624006366, 0.0001099396010470198\n",
+            "#positive = 193, #negative = 187\n",
+            "Accuracy = 0.49473684210526314\n",
+            "Trivial Accuracy = 0.5368421052631579\n",
+            "=============\n",
+            "i = 3\n",
+            "Positive Normal Params: 0.0007261817798938773, 0.0001621000093012564\n",
+            "Negative Normal Params: -0.0005415133019695948, 0.00013460149953531712\n",
+            "#positive = 193, #negative = 186\n",
+            "Accuracy = 0.631578947368421\n",
+            "Trivial Accuracy = 0.5368421052631579\n",
+            "=============\n",
+            "i = 4\n",
+            "Positive Normal Params: 0.0004625353003714653, 0.00015697290339339317\n",
+            "Negative Normal Params: -0.0003125266147452391, 0.00014085780195819252\n",
+            "#positive = 193, #negative = 185\n",
+            "Accuracy = 0.5684210526315789\n",
+            "Trivial Accuracy = 0.5368421052631579\n",
+            "=============\n"
+          ]
         },
-        "id": "sk8k-JSNTAjA",
-        "outputId": "bb175ee9-cfd9-46cc-f1d3-5a8f072aa726"
-      },
-      "execution_count": 65,
-      "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.53125"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-86-c0196b40a41c>:7: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  dataset[\"Prev-Return\"] = dataset[\"Return\"].shift(i)\n"
+          ]
         }
       ]
     },
